[gd_scene load_steps=33 format=1]

[ext_resource path="res://Data/Enemies/Zombie_movement.gd" type="Script" id=1]
[ext_resource path="res://Data/Player/Melee.tres" type="Animation" id=2]
[ext_resource path="res://Data/Enemies/Zombie/Enemies.tres" type="Animation" id=3]
[ext_resource path="res://Data/Enemies/Zombie/armWalk.tres" type="Animation" id=4]
[ext_resource path="res://Data/Enemies/Zombie/Arm_l.png" type="Texture" id=5]
[ext_resource path="res://Data/Enemies/Zombie/idle.png" type="Texture" id=6]
[ext_resource path="res://Data/Enemies/Zombie/Run_2.png" type="Texture" id=7]
[ext_resource path="res://Data/Enemies/Zombie/Run_1.png" type="Texture" id=8]
[ext_resource path="res://Data/Enemies/Zombie/torso.png" type="Texture" id=9]
[ext_resource path="res://Data/Enemies/Zombie/Head.png" type="Texture" id=10]
[ext_resource path="res://Data/Health bar/health_meter.png" type="Texture" id=11]
[ext_resource path="res://Data/Weapons/Gun Parts/lazer sight.png" type="Texture" id=12]
[ext_resource path="res://Data/Enemies/Zombie/Arm_r.png" type="Texture" id=13]
[ext_resource path="res://Data/Enemies/Zombie/Zombie.gd" type="Script" id=14]
[ext_resource path="res://Data/Health bar/health bar empty.png" type="Texture" id=15]
[ext_resource path="res://Data/Health bar/health bar full.png" type="Texture" id=16]
[ext_resource path="res://Data/Enemies/Creep/creepidle.png" type="Texture" id=17]
[ext_resource path="res://Data/Enemies/Creep/creeprun.png" type="Texture" id=18]
[ext_resource path="res://Data/Enemies/Creep/Creep Head.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 6, 5 )

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.5

[sub_resource type="Animation" id=3]

length = 1.0
loop = true
step = 0.1

[sub_resource type="Animation" id=4]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body/arm_r:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 5 ), Vector2( -7, 5 ), Vector2( -5, 5 ) ]
}

[sub_resource type="Animation" id=5]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("arm_r:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 7, 5 ), Vector2( 5, 5 ) ]
}

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 5.576, 21.633 )

[sub_resource type="SpriteFrames" id=7]

animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=8]

custom_solver_bias = 0.0
radius = 36.0
height = 231.0

[sub_resource type="CircleShape2D" id=9]

custom_solver_bias = 0.0
radius = 311.11

[sub_resource type="SpriteFrames" id=10]

animations = [ {
"frames": [ ExtResource( 15 ) ],
"loop": false,
"name": "health_empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "health_full",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 10, 3 )

[sub_resource type="RectangleShape2D" id=12]

custom_solver_bias = 0.0
extents = Vector2( 10, 26 )

[sub_resource type="SpriteFrames" id=13]

animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[node name="Enemies" type="Node2D" groups=[
"enemies",
]]

z/z = -2

[node name="Zombie_movement" type="KinematicBody2D" parent="."]

transform/pos = Vector2( 0, -1 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 19 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="death" type="Timer" parent="Zombie_movement"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="hit_timer" type="Timer" parent="Zombie_movement"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zombie_movement"]

transform/pos = Vector2( 0, 19 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="jump_over" type="RayCast2D" parent="Zombie_movement"]

transform/pos = Vector2( 2.8213e-07, 24 )
transform/rot = 90.0
enabled = true
cast_to = Vector2( 0, 10 )
layer_mask = 1
type_mask = 1

[node name="jump_l" type="RayCast2D" parent="Zombie_movement"]

transform/pos = Vector2( -6, 24 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 1
type_mask = 1

[node name="jump_r" type="RayCast2D" parent="Zombie_movement"]

transform/pos = Vector2( 6, 24 )
enabled = true
cast_to = Vector2( 0, 1 )
layer_mask = 1
type_mask = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Zombie_movement"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Attack = SubResource( 2 )
anims/Melee = ExtResource( 2 )
anims/armRun = ExtResource( 3 )
anims/armWalk = ExtResource( 4 )
anims/fliparmWalk = SubResource( 3 )
anims/shoot = SubResource( 4 )
anims/shootflip = SubResource( 5 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="body" type="KinematicBody2D" parent="Zombie_movement"]

transform/pos = Vector2( 0, 1 )
input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1.07604, 0, 0, 0.924514, 0, 4 )
shapes/0/trigger = false
collision/layers = 4
collision/mask = 0
collision/margin = 0.08

[node name="Timer" type="Timer" parent="Zombie_movement/body"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="arm_l" type="Sprite" parent="Zombie_movement/body"]

transform/pos = Vector2( -5, 2 )
transform/rot = -8.89976
texture = ExtResource( 5 )
centered = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="Zombie_movement/body"]

transform/pos = Vector2( 0, 18 )
frames = SubResource( 7 )
animation = "idle"

[node name="torso" type="Sprite" parent="Zombie_movement/body"]

transform/pos = Vector2( 0, 7 )
texture = ExtResource( 9 )

[node name="head" type="Sprite" parent="Zombie_movement/body"]

transform/pos = Vector2( 0, -6 )
texture = ExtResource( 10 )

[node name="cast" type="RayCast2D" parent="Zombie_movement/body/head"]

enabled = true
cast_to = Vector2( 0, 0 )
layer_mask = 1025
type_mask = 15

[node name="ViewArea" type="Area2D" parent="Zombie_movement/body/head"]

editor/display_folded = true
transform/pos = Vector2( 2.5, -0.45397 )
input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 156.5, 2.45397 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 0
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zombie_movement/body/head/ViewArea"]

transform/pos = Vector2( 156.5, 2.45397 )
transform/rot = 90.0
shape = SubResource( 8 )
trigger = true
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="Zombie_movement/body/head/ViewArea/CollisionShape2D"]

[node name="health_meter" type="Sprite" parent="Zombie_movement/body/head"]

transform/pos = Vector2( -9, -3 )
transform/scale = Vector2( 1, -1 )
texture = ExtResource( 11 )
centered = false

[node name="health" type="Sprite" parent="Zombie_movement/body/head/health_meter"]

transform/pos = Vector2( 2, 1 )
transform/scale = Vector2( 1, 3 )
texture = ExtResource( 12 )
centered = false

[node name="direction" type="RayCast2D" parent="Zombie_movement/body"]

enabled = true
cast_to = Vector2( 0, 0 )
layer_mask = 1
type_mask = 15

[node name="Attack" type="Timer" parent="Zombie_movement/body"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zombie_movement/body"]

visibility/visible = false
transform/pos = Vector2( 0, 4 )
transform/scale = Vector2( 1.07604, 0.924514 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="arm_r" type="Sprite" parent="Zombie_movement/body"]

editor/display_folded = true
transform/pos = Vector2( -5, 5 )
texture = ExtResource( 13 )
centered = false
offset = Vector2( 0, -3 )

[node name="Gun" type="Sprite" parent="Zombie_movement/body/arm_r"]

transform/pos = Vector2( 5, -1 )
centered = false

[node name="Area2D" type="Area2D" parent="Zombie_movement/body"]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 0
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zombie_movement/body/Area2D"]

shape = SubResource( 9 )
trigger = true
_update_shape_index = 0

[node name="Zombie" type="KinematicBody2D" parent="." groups=[
"enemies",
]]

editor/display_folded = true
visibility/visible = false
input/pickable = false
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1.07604, 0, 0, 0.924514, 0, 4 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 14 )
RUN_SPEED = 120
WALK_SPEED = 50
ACCELERATION = 5
acceleration_modifier = 1
total_health = 10

[node name="Timer" type="Timer" parent="Zombie"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="arm_l" type="Sprite" parent="Zombie"]

transform/pos = Vector2( -5, 5 )
transform/rot = -8.89976
texture = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Zombie"]

transform/pos = Vector2( 0, 18 )
frames = SubResource( 7 )
animation = "idle"

[node name="torso" type="Sprite" parent="Zombie"]

transform/pos = Vector2( 0, 7 )
texture = ExtResource( 9 )

[node name="head" type="Sprite" parent="Zombie"]

transform/pos = Vector2( 0, -6 )
texture = ExtResource( 10 )

[node name="arm_r" type="Sprite" parent="Zombie"]

transform/pos = Vector2( -5, 5 )
transform/rot = 8.89976
texture = ExtResource( 13 )

[node name="Vision" type="RayCast2D" parent="Zombie"]

enabled = false
cast_to = Vector2( 0, 100 )
layer_mask = 1
type_mask = 15

[node name="arms" type="AnimationPlayer" parent="Zombie"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Attack = SubResource( 2 )
anims/armRun = ExtResource( 3 )
anims/armWalk = ExtResource( 4 )
anims/fliparmWalk = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="death" type="Timer" parent="Zombie"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="healthBar" type="AnimatedSprite" parent="Zombie"]

transform/pos = Vector2( -16, -30 )
frames = SubResource( 10 )
animation = "health_full"

[node name="ViewArea" type="Area2D" parent="Zombie"]

transform/pos = Vector2( 2.5, -6.45397 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 143.5, -0.54603 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zombie/ViewArea"]

visibility/visible = false
transform/pos = Vector2( 143.5, -0.54603 )
transform/rot = 90.0
shape = SubResource( 8 )
trigger = true
_update_shape_index = 0

[node name="Attack" type="Timer" parent="Zombie"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Area2D" type="Area2D" parent="Zombie"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 25 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zombie/Area2D"]

transform/pos = Vector2( 0, 25 )
shape = SubResource( 11 )
trigger = true
_update_shape_index = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zombie"]

transform/pos = Vector2( 0, 4 )
transform/scale = Vector2( 1.07604, 0.924514 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="Creep" type="KinematicBody2D" parent="."]

editor/display_folded = true
visibility/visible = false
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -4 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
collision/margin = 0.08

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Creep"]

transform/pos = Vector2( 0, -4 )
shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Creep"]

frames = SubResource( 13 )
animation = "idle"

[node name="Timer" type="Timer" parent="Creep"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Vision" type="RayCast2D" parent="Creep"]

transform/rot = 90.0
enabled = false
cast_to = Vector2( 0, 100 )
layer_mask = 1
type_mask = 15

[node name="death" type="Timer" parent="Creep"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="healthBar" type="AnimatedSprite" parent="Creep"]

transform/pos = Vector2( -16, -30 )
frames = SubResource( 10 )
animation = "health_full"

[node name="ViewArea" type="Area2D" parent="Creep"]

editor/display_folded = true
transform/pos = Vector2( 2.5, -6.45397 )
input/pickable = true
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 143.5, -0.54603 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Creep/ViewArea"]

transform/pos = Vector2( 143.5, -0.54603 )
transform/rot = 90.0
shape = SubResource( 8 )
trigger = true
_update_shape_index = 0

[node name="Attack" type="Timer" parent="Creep"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="Creep"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 25 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Creep/Area2D"]

transform/pos = Vector2( 0, 25 )
shape = SubResource( 11 )
trigger = true
_update_shape_index = 0

[node name="head" type="Sprite" parent="Creep"]

transform/pos = Vector2( 0, -16 )
texture = ExtResource( 19 )


